# instagram-analysis

./: .gitignore  README.md  collect_data.py  data_for_uva_amsterdam_posts=80.csv  pyproject.toml  sampled_posts.csv  scrape.py
input_files/: green_marketing_brands.csv  green_marketing_brands_v2.csv
output_files/: posts_able.csv  posts_aday.csv  posts_allbirds.csv  posts_benandjerrys.csv  posts_beyondmeat.csv  posts_blueland.csv  posts_branchbasics.csv  posts_chantecaille.csv  posts_chobani.csv  posts_ethiqueworld.csv  posts_evianwater.csv  posts_facetheory.csv  posts_grovecollaborative.csv  posts_iliabeauty.csv  posts_kjaerweis.csv  posts_kotn.csv  posts_osea_cosmetics.csv  posts_oseamalibu.csv  posts_pact_worldwide.csv  posts_patagonia.csv  posts_reformation.csv  posts_seventhgeneration.csv  posts_supergoop.csv  posts_tataharperskincare.csv  posts_tentree.csv  posts_tillamook.csv  posts_tower28beauty.csv  posts_veja.csv  posts_whogivesacraptp.csv  username=ieuniversity_posts=100.csv  username=nyenrodebu_posts=78.csv  username=usal_posts=100.csv  username=uva_amsterdam_posts=100.csv
