[tool.poetry]
name = "instagram-scraper"
version = "0.1.0"
description = ""
authors = ["Bas Dorsman <superbas1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
instaloader = "^4.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
spyder-kernels = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
